# hidapi

./: Makefile.am  configure.ac
hidtest/: Makefile.am
